--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -3,45 +3,6 @@ body {
   font-family: "Barlow Regular", sans-serif;
   margin: 0;
 }
-nav {
-  height: 80px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between; /* Add this line */
-}
-nav ul {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end; /* Change this line */
-  list-style: none;
-}
-nav ul li {
-  margin: 0 20px;
-}
-nav ul li a {
-  text-decoration: none;
-  color: #ffffff;
-  font-family: "Barlow Regular", sans-serif;
-}
-nav p {
-  margin-left: 20px;
-  color: #ffffff;
-  order: -1; /* Add this line */
-}
-footer {
-  position: relative;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  text-align: center;
-  color: #f5f5f5;
-  padding: 10px;
-  height: 119px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #211f2a;
-}
 .header {
   background-image: url("../images/background-header.png");
   background-size: cover;
@@ -76,7 +37,8 @@ footer {
   border-radius: 10px;
   margin-right: 20px;
   margin-bottom: 20px;
-  flex-direction: column;
+  display: flex;
+  flex-direction: column-reverse;
   background: linear-gradient(
       0deg,
       rgba(0, 0, 0, 0.94) 11%,
@@ -85,8 +47,16 @@ footer {
     ),
     url("../images/Fortnite.jpg");
   background-size: cover;
-  position: relative; /* Add this line */
+  position: relative;
 }
 .game img {
   width: 100%;
+}
+.informations {
+  padding: 5px 20px;
+}
+.game-name {
+  font-size: 40px;
+  font-weight: 700;
+  margin: 0;
 }
