--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -39,15 +39,10 @@ body {
   margin-bottom: 20px;
   display: flex;
   flex-direction: column-reverse;
-  background: linear-gradient(
-      0deg,
-      rgba(0, 0, 0, 0.94) 11%,
-      rgba(0, 0, 0, 0.78) 45%,
-      rgba(255, 255, 255, 0) 100%
-    ),
-    url("../images/Fortnite.jpg");
   background-size: cover;
   position: relative;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .game img {
   width: 100%;
@@ -56,7 +51,50 @@ body {
   padding: 5px 20px;
 }
 .game-name {
+  overflow: hidden;
   font-size: 40px;
   font-weight: 700;
   margin: 0;
+}
+.game-times-played {
+  width: 110px;
+  display: flex;
+  justify-content: right;
+}
+.search-game label {
+  font-size: 24px;
+  font-weight: 700;
+  color: #ffffff;
+}
+.search-game {
+  margin: 0 120px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 520px;
+  height: 55px;
+}
+.search input {
+  background-color: #2b2f40;
+  width: 520px;
+  height: 36px;
+  border-radius: 5px;
+  border: none;
+  color: #ffffff;
+  padding-left: 15px;
+}
+.submit {
+  margin-top: 10px;
+  width: 131.89px;
+  height: 36px;
+  border-radius: 10px;
+  background-color: #6757d6;
+  border: none;
+  color: #ffffff;
+  font-size: 13px;
+  font-weight: 600;
+  line-height: 16px;
+}
+.submit:hover {
+  cursor: pointer;
 }
