--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -11,6 +11,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-right: 20px;
 }
 nav ul {
   display: flex;
