add profile page

--- a/assets/css/update.css
+++ b/assets/css/update.css
@@ -41,7 +41,7 @@ label {
 }
 .delete-game {
   border-radius: 10px;
-  background-color: #ff0000;
+  background-color: #6757d6;
   border: none;
   color: #ffffff;
   font-size: 13px;
