--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -30,9 +30,10 @@ body {
   flex-direction: row;
   align-items: center;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 .game {
-  width: 30%;
+  width: 391px;
   height: 300px;
   border-radius: 10px;
   margin-right: 20px;
