--- a/assets/css/add_game.css
+++ b/assets/css/add_game.css
@@ -54,6 +54,7 @@ body {
   flex-direction: row;
   align-items: center;
   flex-wrap: wrap;
+  /* justify-content: space-between;*/
 }
 .game {
   width: 391px;
