--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,7 +5,21 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   height: 100vh;
+}
+.container {
+  margin-top: 2%;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background: #252836;
+  width: 600px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: auto;
 }
 .container form {
   display: flex;
