--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -35,3 +35,11 @@ h1 {
 .submit:hover {
   cursor: pointer;
 }
+.error {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 500px;
+  text-align: center;
+  font-size: 13px;
+  color: #ff0000;
+}
