--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -93,3 +93,11 @@ footer {
   align-items: center;
   justify-content: center;
 }
+.error {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 500px;
+  text-align: center;
+  font-size: 13px;
+  color: #ff0000;
+}
