--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
 }
 .header {
-  background-image: url("../images/background-header.png");
+  background-image: url("./images/background-header.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -31,6 +31,10 @@ body {
   align-items: center;
   flex-wrap: wrap;
   /* justify-content: space-between;*/
+}
+.container-games a {
+  text-decoration: none;
+  color: #ffffff;
 }
 .game {
   width: 391px;
